fix(forms): remove hiding password visibility feature

--- a/src/app/features/authorization/features/sign-up/components/sign-up/sign-up.component.scss
+++ b/src/app/features/authorization/features/sign-up/components/sign-up/sign-up.component.scss
@@ -35,7 +35,7 @@
     width: 100px;
   }
 
-  &_email {
+  &_field {
     width: 240px;
   }
 
